MDEV-6785 Wrong result on 2nd execution of PS with aggregate function, FROM SQ or MERGE view

a different fix for view.test --ps-protocol crash
(revert the old fix that has caused a regression)